--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-image: url(imgs/bg.png);
+  background-image: url(imgs/cloudyBG.png);
   background-size: cover;
   background-position: top center;
 }
@@ -29,7 +29,7 @@ header {
   padding: 50px 15px 15px;
 }
 
-header > input {
+header input {
   width: 100%;
   max-width: 280px;
   padding: 10px 15px;
@@ -44,7 +44,7 @@ header > input {
   transition: 0.2s ease-out;
 }
 
-header > input:focus {
+header input:focus {
   background-color: rgba(255, 255, 255, 70%);
 }
 
@@ -57,22 +57,42 @@ main {
   text-align: center;
 }
 
-.location > .city {
+.location .city {
   color: white;
   font-size: 30px;
   font-weight: 500;
   margin-bottom: 5px;
 }
 
-.location > .date {
+.location .date {
   color: white;
   font-size: 15px;
 }
 
-.current > .temp {
+.current .temp {
   color: white;
   font-size: 70px;
   font-weight: 900;
   margin: 30px 0px;
   text-shadow: 2px 4px rgba(0, 0, 0, 30%);
+}
+
+.current .temp span {
+  font-weight: 500;
+}
+
+.current .weather {
+  color: white;
+  font-size: 32px;
+  font-weight: 500;
+  font-style: italic;
+  margin-bottom: 15px;
+  text-shadow: 0px 3px rgba(0, 0, 0, 40%);
+}
+
+.current .hi-low {
+  color: white;
+  font-size: 24px;
+  font-weight: 300;
+  text-shadow: 0px 4px rgba(0, 0, 0, 40%);
 }
