Added a few customizations
Added a switch statement to update the background image depending on the weather and wrote the text in portuguese :D

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background-image: url(imgs/cloudyBG.png);
+  background-image: url(imgs/sunnyBG.png);
   background-size: cover;
   background-position: top center;
 }
